[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theme/theme_main.tres" type="Theme" id=1]
[ext_resource path="res://Framework/AutoLoad/Dialog.gd" type="Script" id=2]
[ext_resource path="res://Widgets/Dialog/File.gd" type="Script" id=3]
[ext_resource path="res://Widgets/Dialog/SelectPath.tscn" type="PackedScene" id=4]
[ext_resource path="res://Widgets/Dialog/UnsavedChanges.tscn" type="PackedScene" id=5]
[ext_resource path="res://Widgets/Dialog/AssignHotkey.tscn" type="PackedScene" id=6]

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ActiveLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BlockerLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Blocker" type="ColorRect" parent="BlockerLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.320431 )

[node name="BlockedLayer" type="CanvasLayer" parent="."]

[node name="Templates" type="Node" parent="."]

[node name="File" type="FileDialog" parent="Templates"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -227.0
margin_right = 378.0
margin_bottom = 228.0
access = 2
current_dir = "C:/Synced Docs/Work/Projects/_ColorTool"
current_path = "C:/Synced Docs/Work/Projects/_ColorTool/"
script = ExtResource( 3 )

[node name="RecoveryFailed" type="AcceptDialog" parent="Templates"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -447.0
margin_top = -63.0
margin_right = 447.0
margin_bottom = 63.0
window_title = "Recovery Failed"
dialog_text = "ColorTool crashed while trying to load the last auto save.

Your auto saves can be found in \"Help -> Folders -> Auto-Saves\" and can be recovered once the bug that caused the crash has been fixed.

Details on the cause of the crash can be found in \"Help -> Folders -> Logs\"."

[node name="AssignKey" parent="Templates" instance=ExtResource( 6 )]

[node name="Error" type="AcceptDialog" parent="Templates"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -60.0
margin_right = 173.0
margin_bottom = 29.0
window_title = "Error"

[node name="SelectPath" parent="Templates" instance=ExtResource( 4 )]
margin_left = -173.5
margin_top = -77.5
margin_right = 173.5
margin_bottom = 77.5

[node name="UnsavedChanges" parent="Templates" instance=ExtResource( 5 )]
